[tool.poetry]
name = "event-diffusers"
version = "0.1.0"
description = "Event diffusion"
authors = ["Marissa Dotter <mdotter@mitre.org>", "Michael Doyle <mdoyle@mitre.org>"]
readme = "README.md"
packages = [{include = "event_diffusion"}]

[tool.poetry.dependencies]
python = "^3.10"
tonic = "^1.3.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
numpy = "1.23.1"
diffusers = "^0.18.1"
accelerate = "^0.20.3"
datasets = "^2.13.1"
tensorboard = "^2.13.0"
chardet = "^5.1.0"
fastprogress = "^1.0.3"
wandb = "^0.15.5"
kaggle = "^1.5.15"
fastdownload = "^0.0.7"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"


[tool.poetry.group.jupyter.dependencies]
ipykernel = "^6.24.0"
matplotlib = "^3.7.2"
transformers = "^4.30.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
